fix: font border gaps

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
 	font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-	font-size: 13px;
+	font-size: 14px;
 }
 
 window#waybar {
